commit translated contents

--- a/aspnetcore/migration/20_21.md
+++ b/aspnetcore/migration/20_21.md
@@ -6,6 +6,7 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 06/09/2019
 no-loc:
+- appsettings.json
 - ASP.NET Core Identity
 - cookie
 - Cookie
@@ -17,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/20_21
-ms.openlocfilehash: 23209bdc289b45e805b425551d4705888f6e05e5
-ms.sourcegitcommit: 65add17f74a29a647d812b04517e46cbc78258f9
+ms.openlocfilehash: 409d0e0af1956e588af822fc6fc88d85d27ce2aa
+ms.sourcegitcommit: ca34c1ac578e7d3daa0febf1810ba5fc74f60bbf
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88634149"
+ms.lasthandoff: 10/30/2020
+ms.locfileid: "93057192"
 ---
 # <a name="migrate-from-aspnet-core-20-to-21"></a>Migrate from ASP.NET Core 2.0 to 2.1 (Migrieren von ASP.NET Core 2.0 zu 2.1)
 
@@ -52,12 +53,12 @@ Aktualisieren Sie die Projektdatei:
 * Ersetzen Sie den Paket Verweis für `Microsoft.AspNetCore.All` durch einen Paket Verweis für `Microsoft.AspNetCore.App` . Möglicherweise müssen Sie Abhängigkeiten hinzufügen, die aus entfernt wurden `Microsoft.AspNetCore.All` . Weitere Informationen finden Sie unter <xref:fundamentals/metapackage#migrate> und <xref:fundamentals/metapackage-app>.
 * Entfernen Sie das "Version"-Attribut für den Paket Verweis auf `Microsoft.AspNetCore.App` . Bei Projekten, die verwenden, `<Project Sdk="Microsoft.NET.Sdk.Web">` muss die-Version nicht festgelegt werden. Die Version wird vom Ziel Framework impliziert und so ausgewählt, dass Sie am besten mit der Funktionsweise von ASP.net Core 2,1 kompatibel ist. Weitere Informationen finden Sie unter den [Regeln für Projekte, die auf das freigegebene Framework abzielen](#rules-for-projects-targeting-the-shared-framework) .
 * Aktualisieren Sie für apps, die auf die .NET Framework abzielen, jeden Paket Verweis auf 2,1.
-* Entfernen Sie Verweise auf ** &lt; dotnetclitoolreference &gt; ** -Elemente für die folgenden Pakete. Diese Tools werden standardmäßig im .net Core-CLI gebündelt und müssen nicht separat installiert werden.
+* Entfernen Sie Verweise auf **&lt; dotnetclitoolreference &gt;** -Elemente für die folgenden Pakete. Diese Tools werden standardmäßig im .net Core-CLI gebündelt und müssen nicht separat installiert werden.
   * Microsoft. dotnet. Watcher. Tools ( `dotnet watch` )
   * Microsoft. entityframeworkcore. Tools. dotnet ( `dotnet ef` )
   * Microsoft. Extensions. Caching. sqlconfig. Tools ( `dotnet sql-cache` )
   * Microsoft. Extensions. secretmanager. Tools ( `dotnet user-secrets` )
-* Optional: Sie können das ** &lt; dotnetclitoolreference &gt; ** -Element für entfernen `Microsoft.VisualStudio.Web.CodeGeneration.Tools` . Sie können dieses Tool durch Ausführen von durch eine Global installierte Version ersetzen `dotnet tool install -g dotnet-aspnet-codegenerator` .
+* Optional: Sie können das **&lt; dotnetclitoolreference &gt;** -Element für entfernen `Microsoft.VisualStudio.Web.CodeGeneration.Tools` . Sie können dieses Tool durch Ausführen von durch eine Global installierte Version ersetzen `dotnet tool install -g dotnet-aspnet-codegenerator` .
 * Für 2,1 ist eine [ Razor Klassenbibliothek](xref:razor-pages/ui-class) die empfohlene Lösung für die Verteilung von Razor Dateien. Wenn Ihre APP eingebettete Sichten verwendet oder anderweitig von der Lauf Zeit Kompilierung von Razor Dateien abhängig ist, fügen Sie `<CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>` einer `<PropertyGroup>` in der Projektdatei hinzu.
 
 Das folgende Markup zeigt die von der Vorlage generierte 2,0-Projektdatei:
@@ -70,7 +71,7 @@ Das folgende Markup zeigt die von der Vorlage generierte 2,1-Projektdatei:
 
 ## <a name="rules-for-projects-targeting-the-shared-framework"></a>Regeln für Projekte, die auf das freigegebene Framework abzielen
 
-Ein *freigegebenes Framework * besteht aus einer Reihe von Assemblys (*DLL*-Dateien), die sich nicht in den Ordnern der App befinden. Das freigegebene Framework muss zum Ausführen der App auf dem Computer installiert sein. Weitere Informationen finden Sie unter [The shared framework](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/) (Das freigegebene Framework).
+Ein *freigegebenes Framework* besteht aus einer Reihe von Assemblys ( *DLL* -Dateien), die sich nicht in den Ordnern der App befinden. Das freigegebene Framework muss zum Ausführen der App auf dem Computer installiert sein. Weitere Informationen finden Sie unter [The shared framework](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/) (Das freigegebene Framework).
 
 ASP.net Core 2,1 umfasst die folgenden gemeinsam genutzten Frameworks:
 
@@ -116,7 +117,7 @@ Die folgende Abbildung zeigt den 2,1-Code. Der Code in Grün hat die Version 2,0
 
 ![neue Versions Unterschiede](20_21/_static/main21.png)
 
-Der folgende Code zeigt die Version 2,1 von *Program.cs*:
+Der folgende Code zeigt die Version 2,1 von *Program.cs* :
 
 [!code-csharp[](20_21/sample/Program.cs?name=snippet)]
 
@@ -165,7 +166,7 @@ Die folgenden Optionen sind für die Aktualisierung Identity auf 2,1 verfügbar.
 
 * Verwenden Sie den Identity Code der Benutzeroberfläche 2,0 ohne Änderungen. Der Identity Code der Benutzeroberfläche 2,0 wird vollständig unterstützt. Dies ist ein guter Ansatz, wenn an dem generierten Code bedeutende Änderungen vorgenommen wurden Identity .
 * Löschen Sie Ihren vorhandenen Identity 2,0-Code, und [ Identity Gerüst](xref:security/authentication/scaffold-identity) Sie in Ihr Projekt auf. Das Projekt verwendet die- [ASP.NET Core Identity](xref:security/authentication/identity) [ Razor Klassenbibliothek](xref:razor-pages/ui-class). Sie können Code und die Benutzeroberfläche für jeden Identity Benutzeroberflächen Code generieren, den Sie geändert haben. Wenden Sie die Codeänderungen auf den neu gerüdierten UI-Code an.
-* Löschen Sie Identity den vorhandenen 2,0-Code, und [ Identity ](xref:security/authentication/scaffold-identity) setzen Sie sich mit der Option zum über **Schreiben aller Dateien**in das Projekt um.
+* Löschen Sie Identity den vorhandenen 2,0-Code, und [ Identity](xref:security/authentication/scaffold-identity) setzen Sie sich mit der Option zum über **Schreiben aller Dateien** in das Projekt um.
 
 ### <a name="replace-no-locidentity-20-ui-with-the-no-locidentity-21-no-locrazor-class-library"></a>Ersetzen Identity von 2,0 UI durch die Identity 2,1- Razor Klassenbibliothek
 
@@ -178,20 +179,20 @@ In diesem Abschnitt werden die Schritte zum Ersetzen des generierten Codes der A
   * *Erweiterungen*
 * Erstellen Sie das Projekt.
 * [Gerüst Identity ](xref:security/authentication/scaffold-identity) in Ihrem Projekt:
-  * Wählen Sie die Projekte aus, die die Datei * \_ Layout. cshtml* beenden.
-  * Wählen Sie das **+** Symbol auf der rechten Seite der **Datenkontext Klasse**aus. Übernehmen Sie den Standardnamen.
+  * Wählen Sie die Projekte aus, die die Datei *\_ Layout. cshtml* beenden.
+  * Wählen Sie das **+** Symbol auf der rechten Seite der **Datenkontext Klasse** aus. Übernehmen Sie den Standardnamen.
   * Wählen Sie **Hinzufügen** aus, um eine neue Datenkontext Klasse zu erstellen. Das Erstellen eines neuen Daten Kontexts ist für das Gerüst erforderlich. Sie entfernen den neuen Datenkontext im nächsten Abschnitt.
 
 ### <a name="update-after-scaffolding-no-locidentity"></a>Nach Gerüstbau aktualisieren Identity
 
 * Löschen Sie die vom Identity Gerüst erstellte, von `IdentityDbContext` abgeleitete Klasse im Ordner " *Areas/ Identity /Data/* ".
-* *Bereiche/ Identity / Identity HostingStartup.cs*löschen.
-* Aktualisieren Sie die Datei " * \_ loginpartial. cshtml* ":
-  * Verschieben Sie *pages/ \_ loginpartial. cshtml* in *pages/Shared/ \_ loginpartial. cshtml*.
+* *Bereiche/ Identity / Identity HostingStartup.cs* löschen.
+* Aktualisieren Sie die Datei " *\_ loginpartial. cshtml* ":
+  * Verschieben Sie *pages/ \_ loginpartial. cshtml* in *pages/Shared/ \_ loginpartial. cshtml* .
   * Fügen Sie `asp-area="Identity"` dem Formular und den Anker Links hinzu.
   * Aktualisieren Sie das- `<form />` Element auf `<form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">` .
 
-  Der folgende Code zeigt die aktualisierte Datei " * \_ loginpartial. cshtml* ":
+  Der folgende Code zeigt die aktualisierte Datei " *\_ loginpartial. cshtml* ":
 
   [!code-cshtml[](20_21/sample/_LoginPartial.cshtml?highlight=8,11,22,23)]
 
@@ -204,16 +205,16 @@ Aktualisieren Sie `ConfigureServices` mit folgendem Code:
 ### <a name="the-layout-file"></a>Die Layoutdatei
 
 * Verschieben von *pages/ \_ Layout. cshtml* in *pages/Shared/ \_ Layout. cshtml*
-* Ändern Sie in *Areas/ Identity /pages/ \_ viewstart. cshtml*in `Layout = "/Pages/_Layout.cshtml"` `Layout = "/Pages/Shared/_Layout.cshtml"` .
-* Die Datei " * \_ Layout. cshtml* " weist die folgenden Änderungen auf:
+* Ändern Sie in *Areas/ Identity /pages/ \_ viewstart. cshtml* in `Layout = "/Pages/_Layout.cshtml"` `Layout = "/Pages/Shared/_Layout.cshtml"` .
+* Die Datei " *\_ Layout. cshtml* " weist die folgenden Änderungen auf:
 
   * `<partial name="_CookieConsentPartial" />` wird hinzugefügt. Weitere Informationen finden Sie unter [DSGVO-Unterstützung in ASP.NET Core](xref:security/gdpr).
   * jQuery ändert sich von 2.2.0 in 3.3.1.
 
 ### <a name="_validationscriptspartialcshtml"></a>\_Validationscriptspartial. cshtml
 
-* *Seiten/ \_ Validationscriptspartial. cshtml* wechselt zu *pages/Shared/ \_ validationscriptspartial. cshtml*.
-* " *jQuery. Validate/1.14.0* " ändert sich in " *jQuery. Validate/1.17.0*".
+* *Seiten/ \_ Validationscriptspartial. cshtml* wechselt zu *pages/Shared/ \_ validationscriptspartial. cshtml* .
+* " *jQuery. Validate/1.14.0* " ändert sich in " *jQuery. Validate/1.17.0* ".
 
 ### <a name="new-files"></a>Neue Dateien
 
